Correctly align learning material actions when in edit mode
Needed to separate styling of learning material manager when we have the
search box display and when we are in edit more with no search box

--- a/app/styles/newcomponents/detail-learningmaterials.scss
+++ b/app/styles/newcomponents/detail-learningmaterials.scss
@@ -19,7 +19,16 @@
     @include media($large-screen) {
       @include span-columns(2 of 12);
       @include omega();
+      @include shift(7);
       text-align: right;
+    }
+  }
+
+  &.display-search-box {
+    .actions {
+      @include media($large-screen) {
+        @include shift(0);
+      }
     }
   }
 
